Replace old multi-parameter search query with a faster one-parameter one; add database indexes; tune database pool size